--- a/.src/index.org
+++ b/.src/index.org
@@ -24,7 +24,7 @@
 #+HTML_HEAD: </style>
 
 # #+HTML: <h2 style="color: red; font-weight: bold; text-shadow: 0 0 1px #ee0000"><img style="width: 98%" src="/html/asset/dream.png"></h4>
-#+HTML: <h3 style="color: red; font-weight: normal; font-size: 1.8em; text-shadow: 0 0 1px #ee0000; font-family: 楷体">请诸位务必加强管理与自我管理，提高自觉性与积极性</h3>
+#+HTML: <h3 style="color: red; font-weight: normal; font-size: 1.8em; text-shadow: 0 0 1px #ee0000; font-family: 楷体">毕业季</h3>
 
 #+HTML: <div id="main">
 
